# CommitSense

./: .gitignore  .gitingore  1q  README.md  pyproject.toml  pytest.ini
tests/: test_cli.py  test_sensecommit.py  test_sensefix.py  test_sensetriage.py
tests/fixtures/: sample_diff.txt  sample_pr.txt  sample_stacktrace.txt
